--- a/PagingListViewProject/PagingListViewSample/src/main/res/values/strings.xml
+++ b/PagingListViewProject/PagingListViewSample/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="app_name">PagingListView Sample</string>
     <string name="start_demo">Start demo</string>
+    <string name="loading_countries">Loading countries&#8230;</string>
 </resources>
