PagingListView can now reload if requested
Before, after clearing the list, setting hasMoreItems to true had no
effect on reloading. This removes the item count check and re-adds the
footer view if hasMoreItems is set to true.

This also updates the gradle build (newer android gradle version isn't backwards
compatible and broke the build process).

Updated the sample as well to set a refresh button

--- a/PagingListViewProject/PagingListViewSample/src/main/res/values/strings.xml
+++ b/PagingListViewProject/PagingListViewSample/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">PagingListView Sample</string>
-    <string name="start_demo">Start demo</string>
+    <string name="refresh">Refresh</string>
     <string name="loading_countries">Loading countries&#8230;</string>
 </resources>
